--- a/build.gradle
+++ b/build.gradle
@@ -28,14 +28,18 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Add this line
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux' // Add this line
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // Add this line
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // Add this line
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Add this line
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'com.twilio.sdk:twilio:8.27.1'
+
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 
     compileOnly 'org.projectlombok:lombok'
 
